# navigation_rl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
minefield_rl/: __init__.py  __main__.py  constants.py  main.py  utils.py
minefield_rl/configs/: config.yaml
minefield_rl/env/: __init__.py  env_copy.py  map_generator.py  minefield_env.py
minefield_rl/eval/: __init__.py  compare.py  evaluate.py  render_rollout.py
minefield_rl/models/: __init__.py  drqn.py  mcts.py  rppo.py
minefield_rl/planning/: __init__.py  expert.py
minefield_rl/training/: __init__.py  ppo_rollout.py  run_curriculum.py  sequence_replay.py  train_drqn.py  train_grpo.py  train_imitation.py  train_mcts.py  train_ppo.py
minefield_rl/viz/: __init__.py  charts.py  heatmap.py  pygame_renderer.py
tools/: build_minedeath_montage.py  redo_grpo_stages.py  render_l12_30x30_best.py  render_l12_30x30_minedeath_best.py  render_l12_best.py  run_finetune_minedeath.py  run_finetune_minedeath_30x30.py  run_progressive10.py  run_progressive10_dispersed.py  run_progressive10_extension.py  run_progressive20_dispersed.py  run_progressive30_dispersed.py  scaleup_eval.py
